certain features up. Index ready

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </ul></nav></header>
 
     <main>
+        <p class="subheader">welcome</p>
         <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
         <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
         <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
@@ -24,7 +25,7 @@
 
     </main>
     <footer>
-       <p>"rock band" is a catloving rock band. Get in <a href="mailto:rockband@nothinghere.com">touch</a> </p> 
+       <p>"rock band" site is an education project by Damien Jaemting.</p> 
     </footer>
 </body>
 </html>
