started adding items to webshop

--- a/shop.html
+++ b/shop.html
@@ -10,21 +10,28 @@
 <body>
     <header><h1 class="logo">"rock band"</h1><nav>
         <ul>
-            <li><a href="index.html" class="highligt">start</a></li>
+            <li><a href="index.html">start</a></li>
             <li><a href="blog.html">blog</a></li>
-            <li><a href="shop.html">shop</a></li>
+            <li><a href="shop.html" class="highligt">shop</a></li>
             <li><a href="concerts.html">events</a></li>
     </ul></nav></header>
 
     <main>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-
+    <p class="subheader">shit shop</p>
+    <div class="divshop">
+    <article class="shop"><p class="item">Cup</p> <p class="price">$59</p> <img src="https://images.pexels.com/photos/1187317/pexels-photo-1187317.jpeg" alt="picture of a cup" class="shopimage"><a href=""class="amazonlink">link</a></article>
+    <article class="shop"><p class="item">decater set</p> <p class="price">$295</p> <img src="https://images.pexels.com/photos/8814944/pexels-photo-8814944.jpeg" alt="photo of a decanter and a glass" class="shopimage"><a href=""class="amazonlink">link</a></article>
+        <article class="shop"><p class="item">hip flask</p> <p class="price">$19</p> <img src="https://images.pexels.com/photos/7061699/pexels-photo-7061699.jpeg" alt="photo of a hip flask" class="shopimage"><a href=""class="amazonlink">link</a></article>
+            <article class="shop"><p class="item">hot bottle</p> <p class="price">$89</p> <img src="https://images.pexels.com/photos/10042924/pexels-photo-10042924.jpeg" alt="person drinking from a thermos" class="shopimage"><a href=""class="amazonlink">link</a></article>
+                <article class="shop"><p class="item">bag</p> <p class="price">$399</p> <img src="https://images.pexels.com/photos/1152077/pexels-photo-1152077.jpeg" alt="picture of a bag" class="shopimage"><a href=""class="amazonlink">link</a></article>
+                    <article class="shop"><p class="item">item</p> <p class="price">price</p> <img src="" alt="" class="shopimage"><a href=""class="amazonlink">link</a></article>
+                        <article class="shop"><p class="item">item</p> <p class="price">price</p> <img src="" alt="" class="shopimage"><a href=""class="amazonlink">link</a></article>
+                            <article class="shop"><p class="item">item</p> <p class="price">price</p> <img src="" alt="" class="shopimage"><a href=""class="amazonlink">link</a></article>
+                               
+   </div>
     </main>
     <footer>
-       <p>"rock band" is a catloving rock band. Get in <a href="mailto:rockband@nothinghere.com">touch</a> </p> 
+       <p>"rock band" site is an education project by Damien Jaemting.</p> 
     </footer>
 </body>
 </html>
