--- a/blog.html
+++ b/blog.html
@@ -10,21 +10,27 @@
 <body>
     <header><h1 class="logo">"rock band"</h1><nav>
         <ul>
-            <li><a href="index.html" class="highligt">start</a></li>
-            <li><a href="blog.html">blog</a></li>
+            <li><a href="index.html">start</a></li>
+            <li><a href="blog.html" class="highligt">blog</a></li>
             <li><a href="shop.html">shop</a></li>
             <li><a href="concerts.html">events</a></li>
     </ul></nav></header>
 
     <main>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-
-    </main>
+        <p class="subheader">blog</p>
+        <article class="blog"><h2>Our tourdates not yet confirmed</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam itaque doloribus voluptatem amet sint, iusto quaerat pariatur quidem sit quisquam alias, libero fugit quae similique dignissimos quam provident omnis? </p></a></article>
+         <article class="blog"><h2>in the studio having fun</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste debitis porro qui minus magnam aspernatur! Saepe itaque excepturi, quas nostrum quis blanditiis nulla, eius eligendi aperiam ullam sint similique dolore.</p>
+         <p>Fugit nisi id, harum alias saepe debitis numquam iste ut vitae illo neque. Numquam aliquam ullam iure possimus autem doloribus saepe atque quo cum nesciunt veniam consequuntur, laudantium est? Minima?</p>
+         <p>Delectus, nisi ratione! Voluptates soluta, amet mollitia cum enim molestias? Odio rerum labore illum beatae debitis facilis, saepe aut necessitatibus. Corporis magni modi quidem consectetur facere obcaecati, temporibus quam fugiat.</p>
+         <p>Facere aspernatur fugiat asperiores sapiente quaerat reiciendis similique maxime ipsum molestias, provident quia dignissimos eius soluta odit est deleniti exercitationem laudantium cupiditate eligendi sint. Fuga accusantium facilis voluptates aperiam voluptas.</p>
+         <p>Repudiandae fuga sint illum dignissimos vel, aperiam doloremque quidem odit officia, minus saepe doloribus cupiditate sit, architecto enim animi voluptas laborum in? Rem possimus tempora quibusdam modi, officia quidem ipsam?</p></article>
+         <article class="blog"><h2>added some shit to the shop</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+         <p>Magnam ex praesentium fugiat ipsa aperiam dolorum.</p>
+         <p>Non, consequatur. Qui culpa error dolorum fuga.</p>
+         <p>Quas magnam temporibus corrupti sunt amet nisi!</p></article>
+        
     <footer>
-       <p>"rock band" is a catloving rock band. Get in <a href="mailto:rockband@nothinghere.com">touch</a> </p> 
+       <p>"rock band" site is an education project by Damien Jaemting.</p> 
     </footer>
 </body>
 </html>
