--- a/concerts.html
+++ b/concerts.html
@@ -13,18 +13,17 @@
             <li><a href="index.html" class="highligt">start</a></li>
             <li><a href="blog.html">blog</a></li>
             <li><a href="shop.html">shop</a></li>
-            <li><a href="concerts.html">events</a></li>
+            <li><a href="concerts.html" class="highligt">events</a></li>
     </ul></nav></header>
 
     <main>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-
+        <p class="subheader">concerts</p>
+        <article><a href="blog.html"><h2>"its not a blog" blog. </h2><p>read al about our lates shenanigans. </p></a></article>
+        <article><a href="shop.html"><h2>"its not shit" shop. </h2><p>many of the things you dont need </p></a></article>
+        <article><a href="concerts.html"><h2>our upcoming events.</h2><p>see our devastating live performance </p></a></article>
     </main>
     <footer>
-       <p>"rock band" is a catloving rock band. Get in <a href="mailto:rockband@nothinghere.com">touch</a> </p> 
+       <p>"rock band" site is an education project by Damien Jaemting.</p> 
     </footer>
 </body>
 </html>
