--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 
     <main>
         <p class="subheader">welcome</p>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-        <article><h2>its not a blog-blog. </h2><p>read al about our lates shenanigans. </p></article>
-
+        <article class="article"><a href="blog.html"><h2>"its not a blog" blog. </h2><p>read al about our lates shenanigans. </p></a></article>
+        <article class="article"><a href="shop.html"><h2>"its not shit" shop. </h2><p>many of the things you dont need </p></a></article>
+        <article class="article"><a href="concerts.html"><h2>our upcoming events.</h2><p>see our devastating live performance </p></a></article>
     </main>
     <footer>
        <p>"rock band" site is an education project by Damien Jaemting.</p> 
