first finished mobile vesrion

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,10 @@
     <main>
         <p class="subheader">blog</p>
         <article class="blog"><h2>Our tourdates not yet confirmed</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam itaque doloribus voluptatem amet sint, iusto quaerat pariatur quidem sit quisquam alias, libero fugit quae similique dignissimos quam provident omnis? </p></a></article>
-         <article class="blog"><h2>in the studio having fun</h2><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste debitis porro qui minus magnam aspernatur! Saepe itaque excepturi, quas nostrum quis blanditiis nulla, eius eligendi aperiam ullam sint similique dolore.</p>
+         <article class="blog"><h2>in the studio having fun</h2>
+        <img src="https://images.pexels.com/photos/1848565/pexels-photo-1848565.jpeg" alt="photo pf happy person" class="floatingimage">
+        
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste debitis porro qui minus magnam aspernatur! Saepe itaque excepturi, quas nostrum quis blanditiis nulla, eius eligendi aperiam ullam sint similique dolore.</p>
          <p>Fugit nisi id, harum alias saepe debitis numquam iste ut vitae illo neque. Numquam aliquam ullam iure possimus autem doloribus saepe atque quo cum nesciunt veniam consequuntur, laudantium est? Minima?</p>
          <p>Delectus, nisi ratione! Voluptates soluta, amet mollitia cum enim molestias? Odio rerum labore illum beatae debitis facilis, saepe aut necessitatibus. Corporis magni modi quidem consectetur facere obcaecati, temporibus quam fugiat.</p>
          <p>Facere aspernatur fugiat asperiores sapiente quaerat reiciendis similique maxime ipsum molestias, provident quia dignissimos eius soluta odit est deleniti exercitationem laudantium cupiditate eligendi sint. Fuga accusantium facilis voluptates aperiam voluptas.</p>
