started desktop version

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet'>
 </head>
 <body>
-    <header><h1 class="logo">"rock band"</h1><nav>
+    <header><h1 class="logo">"rock band"</h1>
+        <nav>
         <ul>
             <li><a href="index.html" class="highligt">start</a></li>
             <li><a href="blog.html">blog</a></li>
             <li><a href="shop.html">shop</a></li>
             <li><a href="concerts.html">events</a></li>
-    </ul></nav></header>
+    </ul>
+</nav>
+</header>
 
-    <main>
+    <main class="startmain">
         <p class="subheader">welcome</p>
         <article class="article"><a href="blog.html"><h2>"its not a blog" blog. </h2><p>read al about our lates shenanigans. </p></a></article>
         <article class="article"><a href="shop.html"><h2>"its not shit" shop. </h2><p>many of the things you dont need </p></a></article>
