--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,10 @@
             <li><a href="shop.html">shop</a></li>
             <li><a href="concerts.html">events</a></li>
     </ul></nav></header>
-
-    <main>
+    <div class="divright">
+    <main class="blogpage">
         <p class="subheader">blog</p>
+        <p class="blogintro">this is where we share our most private moments.</p>
         <article class="blog"><h2>Our tourdates not yet confirmed</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam itaque doloribus voluptatem amet sint, iusto quaerat pariatur quidem sit quisquam alias, libero fugit quae similique dignissimos quam provident omnis? </p></a></article>
          <article class="blog"><h2>in the studio having fun</h2>
         <img src="https://images.pexels.com/photos/1848565/pexels-photo-1848565.jpeg" alt="photo pf happy person" class="floatingimage">
@@ -31,7 +32,7 @@
          <p>Magnam ex praesentium fugiat ipsa aperiam dolorum.</p>
          <p>Non, consequatur. Qui culpa error dolorum fuga.</p>
          <p>Quas magnam temporibus corrupti sunt amet nisi!</p></article>
-        
+        </div>
     <footer>
        <p>"rock band" site is an education project by Damien Jaemting.</p> 
     </footer>
