--- a/concerts.html
+++ b/concerts.html
@@ -10,14 +10,15 @@
 <body>
     <header><h1 class="logo">"rock band"</h1><nav>
         <ul>
-            <li><a href="index.html" class="highligt">start</a></li>
+            <li><a href="index.html">start</a></li>
             <li><a href="blog.html">blog</a></li>
             <li><a href="shop.html">shop</a></li>
             <li><a href="concerts.html" class="highligt">events</a></li>
     </ul></nav></header>
 
-    <main>
+    <main class="concertsmain">
         <p class="subheader">concerts</p>
+        <p class="concertstext">"Dogs are metal too"</p>
     
 <section class="concert-list">
 
