--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <article class="article"><a href="blog.html"><h2>"its not a blog" blog. </h2><p>read al about our lates shenanigans. </p></a></article>
         <article class="article"><a href="shop.html"><h2>"its not shit" shop. </h2><p>many of the things you dont need </p></a></article>
         <article class="article"><a href="concerts.html"><h2>our upcoming events.</h2><p>see our devastating live performance </p></a></article>
+        <article class="about"><h2>Who are we?</h2><p>we are a catloving and metalthumping collective of outcasts. read about our shenaningans in the blog, buy our shit, or visit a concert. </p></article>
     </main>
     <footer>
        <p>"rock band" site is an education project by Damien Jaemting.</p> 
