--- a/concerts.html
+++ b/concerts.html
@@ -57,8 +57,8 @@
   <article class="concert">
     <p class="concert-location">Paris, France</p>
     <p class="concert-date">2025-11-13</p>
-    <h3 class="concert-venue">Le Théâtre du Soleil</h3>
-    <p class="concert-phone">+33 1 42 88 7711</p>
+    <h3 class="concert-venue">Le Théâtre du Pastej</h3>
+    <p class="concert-phone">+33 1 42 49 7711</p>
     <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
   </article>
 
