validated and indented

--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="zxx">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,34 +8,49 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet'>
 </head>
+
 <body>
-    <header><h1 class="logo">"rock band"</h1><nav>
-        <ul>
-            <li><a href="index.html">start</a></li>
-            <li><a href="blog.html" class="highligt">blog</a></li>
-            <li><a href="shop.html">shop</a></li>
-            <li><a href="concerts.html">events</a></li>
-    </ul></nav></header>
+    <header>
+        <h1 class="logo">"rock band"</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">start</a></li>
+                <li><a href="blog.html" class="highligt">blog</a></li>
+                <li><a href="shop.html">shop</a></li>
+                <li><a href="concerts.html">events</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="divright">
-    <main class="blogpage">
-        <p class="subheader">blog</p>
-        <p class="blogintro">this is where we share our most private moments.</p>
-        <article class="blog"><h2>Our tourdates not yet confirmed</h2><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam itaque doloribus voluptatem amet sint, iusto quaerat pariatur quidem sit quisquam alias, libero fugit quae similique dignissimos quam provident omnis? </p></a></article>
-         <article class="blog"><h2>in the studio having fun</h2>
-        <img src="https://images.pexels.com/photos/1848565/pexels-photo-1848565.jpeg" alt="photo pf happy person" class="floatingimage">
-        
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste debitis porro qui minus magnam aspernatur! Saepe itaque excepturi, quas nostrum quis blanditiis nulla, eius eligendi aperiam ullam sint similique dolore.</p>
-         <p>Fugit nisi id, harum alias saepe debitis numquam iste ut vitae illo neque. Numquam aliquam ullam iure possimus autem doloribus saepe atque quo cum nesciunt veniam consequuntur, laudantium est? Minima?</p>
-         <p>Delectus, nisi ratione! Voluptates soluta, amet mollitia cum enim molestias? Odio rerum labore illum beatae debitis facilis, saepe aut necessitatibus. Corporis magni modi quidem consectetur facere obcaecati, temporibus quam fugiat.</p>
-         <p>Facere aspernatur fugiat asperiores sapiente quaerat reiciendis similique maxime ipsum molestias, provident quia dignissimos eius soluta odit est deleniti exercitationem laudantium cupiditate eligendi sint. Fuga accusantium facilis voluptates aperiam voluptas.</p>
-         <p>Repudiandae fuga sint illum dignissimos vel, aperiam doloremque quidem odit officia, minus saepe doloribus cupiditate sit, architecto enim animi voluptas laborum in? Rem possimus tempora quibusdam modi, officia quidem ipsam?</p></article>
-         <article class="blog"><h2>added some shit to the shop</h2><p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
-         <p>Magnam ex praesentium fugiat ipsa aperiam dolorum.</p>
-         <p>Non, consequatur. Qui culpa error dolorum fuga.</p>
-         <p>Quas magnam temporibus corrupti sunt amet nisi!</p></article>
-        </div>
+        <main class="blogpage">
+            <p class="subheader">blog</p>
+            <p class="blogintro">this is where we share our most private moments.</p>
+            <article class="blog">
+                <h2>Our tourdates not yet confirmed</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quibusdam itaque doloribus voluptatem amet sint, iusto quaerat pariatur quidem sit quisquam alias, libero fugit quae similique dignissimos quam provident omnis? </p>
+            </article>
+            <article class="blog">
+                <h2>in the studio having fun</h2>
+                <img src="https://images.pexels.com/photos/1848565/pexels-photo-1848565.jpeg" alt="photo pf happy person" class="floatingimage">
+
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste debitis porro qui minus magnam aspernatur! Saepe itaque excepturi, quas nostrum quis blanditiis nulla, eius eligendi aperiam ullam sint similique dolore.</p>
+                <p>Fugit nisi id, harum alias saepe debitis numquam iste ut vitae illo neque. Numquam aliquam ullam iure possimus autem doloribus saepe atque quo cum nesciunt veniam consequuntur, laudantium est? Minima?</p>
+                <p>Delectus, nisi ratione! Voluptates soluta, amet mollitia cum enim molestias? Odio rerum labore illum beatae debitis facilis, saepe aut necessitatibus. Corporis magni modi quidem consectetur facere obcaecati, temporibus quam fugiat.</p>
+                <p>Facere aspernatur fugiat asperiores sapiente quaerat reiciendis similique maxime ipsum molestias, provident quia dignissimos eius soluta odit est deleniti exercitationem laudantium cupiditate eligendi sint. Fuga accusantium facilis voluptates aperiam voluptas.</p>
+                <p>Repudiandae fuga sint illum dignissimos vel, aperiam doloremque quidem odit officia, minus saepe doloribus cupiditate sit, architecto enim animi voluptas laborum in? Rem possimus tempora quibusdam modi, officia quidem ipsam?</p>
+            </article>
+            <article class="blog">
+                <h2>added some shit to the shop</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                <p>Magnam ex praesentium fugiat ipsa aperiam dolorum.</p>
+                <p>Non, consequatur. Qui culpa error dolorum fuga.</p>
+                <p>Quas magnam temporibus corrupti sunt amet nisi!</p>
+            </article>
+        </main>
+    </div>
     <footer>
-       <p>"rock band" site is an education project by Damien Jaemting.</p> 
+        <p>"rock band" site is an education project by Damien Jaemting.</p>
     </footer>
 </body>
+
 </html>
