--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,48 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet'>
 </head>
+
 <body>
-    <header><h1 class="logo">"rock band"</h1>
+    <header>
+        <h1 class="logo">"rock band"</h1>
         <nav>
-        <ul>
-            <li><a href="index.html" class="highligt">start</a></li>
-            <li><a href="blog.html">blog</a></li>
-            <li><a href="shop.html">shop</a></li>
-            <li><a href="concerts.html">events</a></li>
-    </ul>
-</nav>
-</header>
+            <ul>
+                <li><a href="index.html" class="highligt">start</a></li>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="shop.html">shop</a></li>
+                <li><a href="concerts.html">events</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="startmain">
         <p class="subheader">welcome</p>
-        <article class="article"><a href="blog.html"><h2>"its not a blog" blog. </h2><p>read al about our lates shenanigans. </p></a></article>
-        <article class="article"><a href="shop.html"><h2>"its not shit" shop. </h2><p>many of the things you dont need </p></a></article>
-        <article class="article"><a href="concerts.html"><h2>our upcoming events.</h2><p>see our devastating live performance </p></a></article>
-        <article class="about"><h2>Who are we?</h2><p>we are a catloving and metalthumping collective of outcasts. read about our shenaningans in the blog, buy our shit, or visit a concert. </p></article>
+        <article class="article">
+            <a href="blog.html">
+                <h2>"its not a blog" blog. </h2>
+                <p>read al about our lates shenanigans. </p>
+            </a>
+        </article>
+        <article class="article">
+            <a href="shop.html">
+                <h2>"its not shit" shop. </h2>
+                <p>many of the things you dont need </p>
+            </a>
+        </article>
+        <article class="article">
+            <a href="concerts.html">
+                <h2>our upcoming events.</h2>
+                <p>see our devastating live performance </p>
+            </a>
+        </article>
+        <article class="about">
+            <h2>Who are we?</h2>
+            <p>we are a catloving and metalthumping collective of outcasts. read about our shenaningans in the blog, buy our shit, or visit a concert. </p>
+        </article>
     </main>
     <footer>
-       <p>"rock band" site is an education project by Damien Jaemting.</p> 
+        <p>"rock band" site is an education project by Damien Jaemting.</p>
     </footer>
 </body>
+
 </html>
