--- a/concerts.html
+++ b/concerts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,107 +8,112 @@
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Arvo' rel='stylesheet'>
 </head>
+
 <body>
-    <header><h1 class="logo">"rock band"</h1><nav>
-        <ul>
-            <li><a href="index.html">start</a></li>
-            <li><a href="blog.html">blog</a></li>
-            <li><a href="shop.html">shop</a></li>
-            <li><a href="concerts.html" class="highligt">events</a></li>
-    </ul></nav></header>
+    <header>
+        <h1 class="logo">"rock band"</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">start</a></li>
+                <li><a href="blog.html">blog</a></li>
+                <li><a href="shop.html">shop</a></li>
+                <li><a href="concerts.html" class="highligt">events</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main class="concertsmain">
         <p class="subheader">concerts</p>
         <p class="concertstext">"Dogs are metal too"</p>
-    
-<section class="concert-list">
 
-    <article class="concert">
-    <p class="concert-location">London, UK</p>
-    <p class="concert-date">2025-11-01</p>
-    <h3 class="concert-venue">The Arcadium</h3>
-    <p class="concert-phone">+44 20 7946 0125</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+        <div class="concert-list">
 
-  <article class="concert">
-    <p class="concert-location">Austin, TX, USA</p>
-    <p class="concert-date">2025-11-04</p>
-    <h3 class="concert-venue">Blue River Arena</h3>
-    <p class="concert-phone">+1 512 555 2388</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">London, UK</p>
+                <p class="concert-date">2025-11-01</p>
+                <h3 class="concert-venue">The Arcadium</h3>
+                <p class="concert-phone">+44 20 7946 0125</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Vienna, Austria</p>
-    <p class="concert-date">2025-11-07</p>
-    <h3 class="concert-venue">Haus der Musik</h3>
-    <p class="concert-phone">+43 1 512 1234</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Austin, TX, USA</p>
+                <p class="concert-date">2025-11-04</p>
+                <h3 class="concert-venue">Blue River Arena</h3>
+                <p class="concert-phone">+1 512 555 2388</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Tokyo, Japan</p>
-    <p class="concert-date">2025-11-10</p>
-    <h3 class="concert-venue">Tokyo Sound Hall</h3>
-    <p class="concert-phone">+81 3 5569 7788</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Vienna, Austria</p>
+                <p class="concert-date">2025-11-07</p>
+                <h3 class="concert-venue">Haus der Musik</h3>
+                <p class="concert-phone">+43 1 512 1234</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Paris, France</p>
-    <p class="concert-date">2025-11-13</p>
-    <h3 class="concert-venue">Le Théâtre du Pastej</h3>
-    <p class="concert-phone">+33 1 42 49 7711</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Tokyo, Japan</p>
+                <p class="concert-date">2025-11-10</p>
+                <h3 class="concert-venue">Tokyo Sound Hall</h3>
+                <p class="concert-phone">+81 3 5569 7788</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Toronto, Canada</p>
-    <p class="concert-date">2025-11-16</p>
-    <h3 class="concert-venue">The Velvet Stage</h3>
-    <p class="concert-phone">+1 416 555 7700</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Paris, France</p>
+                <p class="concert-date">2025-11-13</p>
+                <h3 class="concert-venue">Le Théâtre du Pastej</h3>
+                <p class="concert-phone">+33 1 42 49 7711</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Madrid, Spain</p>
-    <p class="concert-date">2025-11-19</p>
-    <h3 class="concert-venue">El Palacio de Música</h3>
-    <p class="concert-phone">+34 91 555 9988</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Toronto, Canada</p>
+                <p class="concert-date">2025-11-16</p>
+                <h3 class="concert-venue">The Velvet Stage</h3>
+                <p class="concert-phone">+1 416 555 7700</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Stockholm, Sweden</p>
-    <p class="concert-date">2025-11-22</p>
-    <h3 class="concert-venue">Nordic Soundhouse</h3>
-    <p class="concert-phone">+46 8 555 1122</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Madrid, Spain</p>
+                <p class="concert-date">2025-11-19</p>
+                <h3 class="concert-venue">El Palacio de Música</h3>
+                <p class="concert-phone">+34 91 555 9988</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Rio de Janeiro, Brazil</p>
-    <p class="concert-date">2025-11-25</p>
-    <h3 class="concert-venue">Rio Beat Hall</h3>
-    <p class="concert-phone">+55 21 4444 6677</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Stockholm, Sweden</p>
+                <p class="concert-date">2025-11-22</p>
+                <h3 class="concert-venue">Nordic Soundhouse</h3>
+                <p class="concert-phone">+46 8 555 1122</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-  <article class="concert">
-    <p class="concert-location">Sydney, Australia</p>
-    <p class="concert-date">2025-11-28</p>
-    <h3 class="concert-venue">Sydney Music Dock</h3>
-    <p class="concert-phone">+61 2 9012 7788</p>
-    <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
-  </article>
+            <div class="concert">
+                <p class="concert-location">Rio de Janeiro, Brazil</p>
+                <p class="concert-date">2025-11-25</p>
+                <h3 class="concert-venue">Rio Beat Hall</h3>
+                <p class="concert-phone">+55 21 4444 6677</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
-</section>
+            <div class="concert">
+                <p class="concert-location">Sydney, Australia</p>
+                <p class="concert-date">2025-11-28</p>
+                <h3 class="concert-venue">Sydney Music Dock</h3>
+                <p class="concert-phone">+61 2 9012 7788</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+            </div>
 
+        </div>
 
     </main>
     <footer>
-       <p>"rock band" site is an education project by Damien Jaemting.</p> 
+        <p>"rock band" site is an education project by Damien Jaemting.</p>
     </footer>
 </body>
+
 </html>
