Corrected headers and accessibility

--- a/concerts.html
+++ b/concerts.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="concertsmain">
-        <p class="subheader">concerts</p>
+        <h2 class="subheader">concerts</h2>
         <p class="concertstext">"Dogs are metal too"</p>
 
         <div class="concert-list">
@@ -32,80 +32,80 @@
                 <p class="concert-location">London, UK</p>
                 <p class="concert-date">2025-11-01</p>
                 <h3 class="concert-venue">The Arcadium</h3>
-                <p class="concert-phone">+44 20 7946 0125</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:+44 555 01 01 01" class="concert-phone" title="Phone number">+44 555 7946 0125</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Austin, TX, USA</p>
                 <p class="concert-date">2025-11-04</p>
                 <h3 class="concert-venue">Blue River Arena</h3>
-                <p class="concert-phone">+1 512 555 2388</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:1 555 555 2388" class="concert-phone" title="Phone number">+1 555 555 2388</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Vienna, Austria</p>
                 <p class="concert-date">2025-11-07</p>
                 <h3 class="concert-venue">Haus der Musik</h3>
-                <p class="concert-phone">+43 1 512 1234</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:1 555 1234" class="concert-phone" title="Phone number">+43 1 555 1234</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Tokyo, Japan</p>
                 <p class="concert-date">2025-11-10</p>
                 <h3 class="concert-venue">Tokyo Sound Hall</h3>
-                <p class="concert-phone">+81 3 5569 7788</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:81 3 555 5569 7788" class="concert-phone" title="Phone number">+81 3 555 5569 7788</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Paris, France</p>
                 <p class="concert-date">2025-11-13</p>
                 <h3 class="concert-venue">Le Théâtre du Pastej</h3>
-                <p class="concert-phone">+33 1 42 49 7711</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:33 555 1 42 49 7711" class="concert-phone" title="Phone number">+33 555 1 42 49 7711</p>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Toronto, Canada</p>
                 <p class="concert-date">2025-11-16</p>
                 <h3 class="concert-venue">The Velvet Stage</h3>
-                <p class="concert-phone">+1 416 555 7700</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:1 555 416 555 7700" class="concert-phone" title="Phone number">+1 555 416 555 7700</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Madrid, Spain</p>
                 <p class="concert-date">2025-11-19</p>
                 <h3 class="concert-venue">El Palacio de Música</h3>
-                <p class="concert-phone">+34 91 555 9988</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:34 555 91 555 9988" class="concert-phone" title="Phone number">+34 555 91 555 9988</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Stockholm, Sweden</p>
                 <p class="concert-date">2025-11-22</p>
                 <h3 class="concert-venue">Nordic Soundhouse</h3>
-                <p class="concert-phone">+46 8 555 1122</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:46 8 55 555 1122" class="concert-phone" title="Phone number">+46 8 55 555 1122</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Rio de Janeiro, Brazil</p>
                 <p class="concert-date">2025-11-25</p>
                 <h3 class="concert-venue">Rio Beat Hall</h3>
-                <p class="concert-phone">+55 21 4444 6677</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:55 555 21 4444 6677" class="concert-phone" title="Phone number">+55 555 21 4444 6677</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
             <div class="concert">
                 <p class="concert-location">Sydney, Australia</p>
                 <p class="concert-date">2025-11-28</p>
                 <h3 class="concert-venue">Sydney Music Dock</h3>
-                <p class="concert-phone">+61 2 9012 7788</p>
-                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="tickster.com">tickets</a></p>
+                <a href="tel:61 555 2 9012 7788" class="concert-phone" title="Phone number">+61 555 2 9012 7788</a>
+                <p class="concert-website"><a href="https://www.tickster.com/se/sv/start" target="_blank" title="a link to a site that sell tickets">tickets & more details</a></p>
             </div>
 
         </div>
