--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <main class="startmain">
-        <p class="subheader">welcome</p>
+        <h2 class="subheader">welcome</h2>
         <article class="article">
             <a href="blog.html">
                 <h2>"its not a blog" blog. </h2>
