--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
     </header>
     <div class="divright">
         <main class="blogpage">
-            <p class="subheader">blog</p>
+            <h2 class="subheader">blog</h2>
             <p class="blogintro">this is where we share our most private moments.</p>
             <article class="blog">
                 <h2>Our tourdates not yet confirmed</h2>
