updated title in weblisnk shop

--- a/shop.html
+++ b/shop.html
@@ -28,35 +28,35 @@
 
             <div class="shop"> <img src="https://images.pexels.com/photos/1187317/pexels-photo-1187317.jpeg" alt="picture of a cup" class="shopimage">
                 <h3 class="item">Cup</h3>
-                <p class="price">$59</p><a href="https://www.amazon.de/s?k=cup&crid=EWFETRK2961D&sprefix=cup%2Caps%2C228&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$59</p><a href="https://www.amazon.de/s?k=cup&crid=EWFETRK2961D&sprefix=cup%2Caps%2C228&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"><img src="https://images.pexels.com/photos/8814944/pexels-photo-8814944.jpeg" alt="photo of a decanter and a glass" class="shopimage">
                 <h3 class="item">decater set</h3>
-                <p class="price">$295</p> <a href="https://www.amazon.de/s?k=decanter+set&crid=31GDDW1IX7902&sprefix=decanter+set%2Caps%2C116&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$295</p> <a href="https://www.amazon.de/s?k=decanter+set&crid=31GDDW1IX7902&sprefix=decanter+set%2Caps%2C116&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"> <img src="https://images.pexels.com/photos/7061699/pexels-photo-7061699.jpeg" alt="photo of a hip flask" class="shopimage">
                 <h3 class="item">hip flask</h3>
-                <p class="price">$19</p><a href="https://www.amazon.de/s?k=hip+flask&crid=3J3L56A2CMJKZ&sprefix=hip+flask%2Caps%2C103&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$19</p><a href="https://www.amazon.de/s?k=hip+flask&crid=3J3L56A2CMJKZ&sprefix=hip+flask%2Caps%2C103&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"><img src="https://images.pexels.com/photos/10042924/pexels-photo-10042924.jpeg" alt="person drinking from a thermos" class="shopimage">
                 <h3 class="item">hot bottle</h3>
-                <p class="price">$89</p> <a href="https://www.amazon.de/s?k=thermos&crid=2DFR1K77JWP6X&sprefix=thermos%2Caps%2C110&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$89</p> <a href="https://www.amazon.de/s?k=thermos&crid=2DFR1K77JWP6X&sprefix=thermos%2Caps%2C110&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"> <img src="https://images.pexels.com/photos/1152077/pexels-photo-1152077.jpeg" alt="picture of a bag" class="shopimage">
                 <h3 class="item">bag</h3>
-                <p class="price">$399</p> <a href="https://www.amazon.de/s?k=bag&crid=1RGOGVWG3OU85&sprefix=bag%2Caps%2C118&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$399</p> <a href="https://www.amazon.de/s?k=bag&crid=1RGOGVWG3OU85&sprefix=bag%2Caps%2C118&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"> <img src="https://images.pexels.com/photos/601168/pexels-photo-601168.jpeg" alt="lady in a hat" class="shopimage">
                 <h3 class="item">hat</h3>
-                <p class="price">$39</p><a href="https://www.amazon.de/s?k=hat&crid=193MWXIVL27UH&sprefix=hat%2Caps%2C113&ref=nb_sb_noss_2" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$39</p><a href="https://www.amazon.de/s?k=hat&crid=193MWXIVL27UH&sprefix=hat%2Caps%2C113&ref=nb_sb_noss_2" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"> <img src="https://images.pexels.com/photos/753969/pexels-photo-753969.jpeg" alt="photo of bangles" class="shopimage">
                 <h3 class="item">bracelets</h3>
-                <p class="price">$59</p><a href="https://www.amazon.de/s?k=bracelets&crid=20MF8UQGXLVQV&sprefix=bracelets%2Caps%2C110&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$59</p><a href="https://www.amazon.de/s?k=bracelets&crid=20MF8UQGXLVQV&sprefix=bracelets%2Caps%2C110&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
             <div class="shop"><img src="https://images.pexels.com/photos/8473518/pexels-photo-8473518.jpeg" alt="photo of a dog bowl" class="shopimage">
                 <h3 class="item">dog bowl</h3>
-                <p class="price">$79</p> <a href="https://www.amazon.de/s?k=dog+bowl&crid=2QH1MVZUG90Z3&sprefix=dog+bowl%2Caps%2C159&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="this and more at amazon">this and more at amazon</a></div>
+                <p class="price">$79</p> <a href="https://www.amazon.de/s?k=dog+bowl&crid=2QH1MVZUG90Z3&sprefix=dog+bowl%2Caps%2C159&ref=nb_sb_noss_1" class="amazonlink" target="_blank" title="click here to visit the amazon shop">this and more at amazon</a></div>
 
         </div>
     </main>
