--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,9 @@
             </ul>
         </nav>
     </header>
+    <main>
     <div class="divright">
-        <main class="blogpage">
+        <section class="blogpage">
             <h2 class="subheader">blog</h2>
             <p class="blogintro">this is where we share our most private moments.</p>
             <article class="blog">
@@ -46,8 +47,9 @@
                 <p>Non, consequatur. Qui culpa error dolorum fuga.</p>
                 <p>Quas magnam temporibus corrupti sunt amet nisi!</p>
             </article>
-        </main>
+        </section>
     </div>
+    </main>
     <footer>
         <p>"rock band" site is an education project by Damien Jaemting.</p>
     </footer>
